# clone_client

./: PKG-INFO  README.md  pyproject.toml
clone_client/: client.py  config.py  discovery.py  error_frames.py  exceptions.py  grpc_client.py  remapper.py  types.py  utils.py
clone_client/.nvim/: session
clone_client/camera_driver/: client.py  config.py
clone_client/camera_driver/sync/: __init__.py  client.py
clone_client/controller/: client.py  config.py
clone_client/controller/proto/: controller.proto  controller_pb2.py  controller_pb2.pyi  controller_pb2_grpc.py  supervisor.proto  supervisor_pb2.py  supervisor_pb2.pyi  supervisor_pb2_grpc.py
clone_client/controller/sync/: client.py
clone_client/dipole_estimation/: README.md  common.py  config.py  dipole_quat_to_hinges.py  generate_joint_model_file.py  hand_mapping_config_left.toml  hand_mapping_config_right.toml  joint_model.py  json_to_toml.py  mujoco_backend.py  mujoco_utils.py  validate_joint_model.py
clone_client/examples/: 2WYJEB.py  3WYJEB.py  WYJEB.py  api_explanation.py  api_explanation_sync.py  camera_driver_example.py  collect_mag_data.py  convert_imu_global_to_relative.py  dipole_estimator_usage.py  display_live_pose_estimation.py  display_live_telemetry.py  display_pose_vector.py  flush_pressure_system.py  get_calibration_data.py  get_errors.py  get_nodes_example.py  get_set_imu_spec_settings.py  hardware_driver_api.py  imu_info_functions_test.py  pause_telemetry.py  pose_estimation_usage.py  pose_estimator_maginterpol.py  qvel_exmaple.py  remapper_example.py  set_pressures_example.py  test_mapping.py  using_data_streams.py  using_with_unix_sockets.py
clone_client/hw_driver/: client.py  config.py
clone_client/hw_driver/sync/: client.py
clone_client/kinematics/: pose_estimator.py
clone_client/kinematics/tools/: utils.py
clone_client/magnet/: __init__.py
clone_client/pose_estimation/: gaussrider_joint_mapping-example.toml  magmap-righthand-example.json  pose_estimator.py
clone_client/proto/: camera_driver.proto  camera_driver_pb2.py  camera_driver_pb2.pyi  camera_driver_pb2_grpc.py  controller.proto  controller_pb2.py  controller_pb2_grpc.py  data_types.proto  data_types_pb2.py  data_types_pb2.pyi  data_types_pb2_grpc.py  hardware_driver.proto  hardware_driver_pb2.py  hardware_driver_pb2.pyi  hardware_driver_pb2_grpc.py  state_store.proto  state_store_pb2.py  state_store_pb2.pyi  state_store_pb2_grpc.py
clone_client/scripts/: comm_benchmark.py  flush_pressure_system.py  get_calibration_data.py
clone_client/scripts/devscripts/: display_gauss_rider_bfield.py  plotter.py  (+2 more)
clone_client/state_store/: client.py  config.py  rcv_client.py
clone_client/sync/: client.py
enhanced_controller/: README.md  __init__.py  controller.py  main.py
enhanced_controller/control/: hand_controller.py
enhanced_controller/data/: motion_logger.py
enhanced_controller/hardware/: hardware_adapter.py
enhanced_controller/interface/: feedback_panel.py  hand_gui.py
enhanced_controller/sensors/: touch_sensor.py
enhanced_controller/utils/: motion_range.py
(+12 files in other folders)
