[tool.poetry]
name = "clone-client"
version = "0.0.6"
description = ""
authors = ["Clone Inc."]
readme = "README.md"
packages = [{include = "clone_client"}]

[tool.poetry.dependencies]
pydantic = {version = "1.10.9", extras = ["dotenv"]}
python = "~3.9"
zeroconf = "^0.38.6"
grpcio = "^1.57.0"
grpcio-tools = "^1.57.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.1"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.7.0"
flake8-isort = "^4.1.1"
mypy = "0.971"
pylint = "^2.17.4"
taskipy = "^1.9.0"
mypy-protobuf = "^3.2.0"
types-protobuf = "^3.19.22"
pylint-pydantic = "^0.2.4"
pylint-protobuf = "^0.20.2"

[tool.taskipy.tasks]
fmt = "isort ./clone_client && black ./clone_client"
lint = """
    black --check ./clone_client && \
    pylint ./clone_client && \
    flake8 ./ && \
    bandit -r ./ -x ./.venv -ll
"""
check-types = "mypy ./"
run-protoc = "python ./run_protoc.py"

[tool.black]
line-length = 110
target-version = ['py311']
exclude = 'pb2.pyi?$|pb2_grpc.py$'

[tool.isort]
profile = "black"
multi_line_output = 3
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
skip_glob = ["**/*_pb2*[@(py\\0|pyi]"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
